# SCFD-all

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CODING_GUIDELINES.md  TODO.md  format-all.sh
include/scfd/arrays/: arranger_base.h  array.h  array_nd.h  array_nd_view.h  array_nd_visible.h  array_thrust_cast.h  array_view.h  array_visible.h  arrays_all.h  arrays_config.h  arrays_visible_all.h  first_index_fast_arranger.h  last_index_fast_arranger.h  objects_array.h  objects_array_view.h  placeholder.h  tensorN_array.h  tensorN_array_nd.h  tensorN_array_nd_view.h  tensorN_array_nd_visible.h  tensorN_array_view.h  tensorN_array_visible.h  tensor_array_nd.h  tensor_array_nd_view.h  tensor_array_nd_visible.h  tensor_base.h
include/scfd/backend/: backend.h  cuda.h  hip.h  omp.h  serial_cpu.h  sycl.h  value_pair.h
include/scfd/communication/: faces_partitioner.h  hypre_mpi_communicator.h  hypre_mpi_wrap.h  linear_partitioner.h  mpi_binary_file.h  mpi_comm.h  mpi_comm_info.h  mpi_communicator.h  mpi_communicator_info.h  mpi_rect_distributor.h  mpi_wrap.h  parted_map.h  rect_distributor.h  rect_partitioner.h  sequential_mpi_debug.h  serial_communicator.h  serial_map.h
include/scfd/exclusive_scan/: exclusive_scan_config.h  omp_exclusive_scan_impl.h  serial_cpu.h  sycl_exclusive_scan_impl.h  thrust.h
include/scfd/external_libraries/: cublas_wrap.h  cublas_wrap_singleton_impl.h  cufft_wrap.h  curand_wrap.h  cusolver_wrap.h  cusolver_wrap_singleton_impl.h  hipblas_wrap.h  hipblas_wrap_singleton_impl.h  hipsolver_wrap.h  hipsolver_wrap_singleton_impl.h  invert_upper_triangular_dense_matrix_cuda.h  invert_upper_triangular_dense_matrix_cuda_impl.cuh  invert_upper_triangular_dense_matrix_host.h  lapack_wrap.h  manual_init_singleton.h  regularize_qr_of_defect_matrix_cuda.h  regularize_qr_of_defect_matrix_cuda_impl.cuh  regularize_qr_r_system_rhs_of_defect_matrix_system_cuda.h  regularize_qr_r_system_rhs_of_defect_matrix_system_cuda_impl.cuh
include/scfd/for_each/: cuda.h  cuda_impl.cuh  cuda_nd.h  cuda_nd_impl.cuh  for_each_config.h  for_each_func_macro.h  hip.h  hip_impl.h  hip_nd.h  hip_nd_impl.h  openmp.h  openmp_impl.h  openmp_nd.h  openmp_nd_impl.h  serial_cpu.h  serial_cpu_nd.h  sycl.h  sycl_impl.h  sycl_nd.h  sycl_nd_impl.h
include/scfd/geometry/: CONCEPTS.txt  intersect_bounding_volumes.h  intersect_triangles.h  obb.h  obb_node.h  quaternion.h  static_vec_traits.h
include/scfd/memory/: MEMORY_CONCEPT.txt  cuda.h  hip.h  host.h  shared_buffer.h  sycl.h  (+6 more)
test/: CMakeLists.txt
test/arrays/: CMakeLists.txt  Makefile  custom_index_arranger.h  custom_index_fast_arranger.h  test_cuda_arrays.cu  test_cuda_unified_arrays.cu  test_custom_index_arranger.cpp  test_custom_index_arranger.cu  test_custom_index_arranger.h  test_last_index_fast_arranger.cpp  test_tensor.cpp  test_tensor_array_nd.cpp  test_tensor_array_nd.cu  test_tensor_array_nd_syntax.cpp  test_tensor_array_nd_visible.cu
test/arrays/detail/: CMakeLists.txt  Makefile  test_dim_getter.cpp  test_dyn_dim_counter.cpp  test_parameter_indexer.cpp  test_size_calculator.cpp  test_template_arg_search.cpp  test_template_indexer.cpp
test/backend/: Makefile  test_backend_algorithms_common.h  test_backend_algorithms_cuda.cu  test_backend_algorithms_hip.cpp  test_backend_algorithms_omp_cpu.cpp  test_backend_algorithms_serial_cpu.cpp  test_backend_algorithms_sycl.cpp  test_backend_exclusive_scan_omp_vs_cuda.cu  test_backend_omp_cpu.cpp  test_backend_performance_common.h  test_backend_performance_cuda.cu  test_backend_performance_hip.cpp  test_backend_performance_omp_cpu.cpp  test_backend_performance_serial_cpu.cpp  test_backend_performance_sycl.cpp  test_backend_runtime_common.h  test_backend_runtime_cuda.cu  test_backend_runtime_hip.cpp  test_backend_runtime_omp_cpu.cpp  test_backend_runtime_serial_cpu.cpp  test_backend_runtime_sycl.cpp  test_backend_serial_cpu.cpp  test_backend_types_cuda.cu  test_backend_types_hip.cpp  test_backend_types_sycl.cpp
test/communication/: Makefile  test_backend_runtime_mpi.cpp  test_backend_runtime_mpi_device.cpp  test_mpi_binary_file.cpp  test_mpi_comm_calls.cpp  test_mpi_comm_collectives.cpp  test_mpi_comm_p2p.cpp  test_mpi_comm_split.cpp  test_mpi_rect_distributor.cu  test_mpi_rect_distributor_tensor.cu  test_mpi_thread_multiple.cpp  test_sequential_mpi.cpp
test/external_libraries/: CMakeLists.txt  Makefile  test_cusolver_wrap.cu  test_fail_cusolver_wrap_glob_init.cu  test_gesv_with_defect_matrix.cu
test/for_each/: CMakeLists.txt  test_for_each.cu  test_for_each_func_macro.cpp  test_for_each_hip.cpp  test_for_each_nd.cu  test_for_each_nd_sycl.cpp  test_for_each_sycl.cpp
test/for_paper/: CMakeLists.txt  plot_resutls.py  test_hip.cpp  test_omp.cu  test_sycl.cpp  test_tensor_array_3d_cross_product.cu
test/geometry/: CMakeLists.txt  intersect_triangles_test.cpp  static_vec_traits_test.cpp
test/matmul/: CMakeLists.txt  Makefile  all_kernels.h  common_parts.h  config_scfd.h  exec_all.sh  test_matmul_cuda.cu  test_matmul_hip.cpp  test_matmul_sycl.cpp
test/memory/: Makefile  test_shared_buffer.cpp  test_thrust_ptr_cuda.cu
test/mgpu_reduce/: Makefile
test/poisson_jacobi/: Makefile  README.md  current_dim.h  current_poisson_solver.h  poisson_jacobi.cpp  poisson_kernel.h  poisson_solver.h  poisson_solver_cuda_inst.cu  poisson_solver_hip_inst.hip  poisson_solver_impl.h  poisson_solver_lambda_impl.h  poisson_solver_omp_inst.cpp  poisson_solver_sycl_inst.cpp
test/static_mat/: CMakeLists.txt  Makefile  test_mat.cu  test_mat_host.cpp
test/static_vec/: CMakeLists.txt  Makefile  test_rect.cpp  test_vec.cpp  test_vec_cuda.cpp  test_vec_cuda.cu  test_vec_cuda.h
test/utils/: Makefile  cuda_test.cu  cuda_test_presist.cu  logged_obj.cpp  main_try_catch.cpp  test_constant_data.cpp  test_constant_data.cu  test_constant_data2.cu  test_format_json.cpp  test_log_basic_cformatted_wrap.cpp  test_log_basic_cformatted_wrap.cu  test_log_mpi_cuda.cu  test_log_std_singleton.cpp  test_log_std_thread_safety.cpp  test_log_std_thread_safety.cu  test_system_timer_event.cpp  test_todo.cpp  test_todo.cu
(+172 files in other folders)
