
add_executable(test_template_indexer.bin test_template_indexer.cpp)
target_link_libraries(test_template_indexer.bin gtest_main)
add_executable(test_template_arg_search.bin test_template_arg_search.cpp)
target_link_libraries(test_template_arg_search.bin gtest_main)
add_executable(test_size_calculator.bin test_size_calculator.cpp)
target_link_libraries(test_size_calculator.bin gtest_main)
add_executable(test_parameter_indexer.bin test_parameter_indexer.cpp)
target_link_libraries(test_parameter_indexer.bin gtest_main)
add_executable(test_dyn_dim_counter.bin test_dyn_dim_counter.cpp)
target_link_libraries(test_dyn_dim_counter.bin gtest_main)
add_executable(test_dim_getter.bin test_dim_getter.cpp)
target_link_libraries(test_dim_getter.bin gtest_main)

add_test(NAME test_template_indexer COMMAND test_template_indexer.bin)
add_test(NAME test_template_arg_search COMMAND test_template_arg_search.bin)
add_test(NAME test_size_calculator COMMAND test_size_calculator.bin)
add_test(NAME test_parameter_indexer COMMAND test_parameter_indexer.bin)
add_test(NAME test_dyn_dim_counter COMMAND test_dyn_dim_counter.bin)
add_test(NAME test_dim_getter COMMAND test_dim_getter.bin)
